# logfire-content

./: .gitignore  AGENTS.md  DEVELOPING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
docs/: cli-reference.md  index.md  llm-generation-guide.md  panel-types.md  query-reference.md
integrations/host-metrics/: README.md  collector.yaml  overview.yaml
integrations/memcached/: overview.yaml
src/logfire_cli/: __init__.py  cli.py  client.py  models.py
src/logfire_cli/clients/: __init__.py  logfire_api.py
src/logfire_cli/models/: __init__.py  logfire_api.py
src/logfire_cli/utilities/: __init__.py  console.py  file.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_integration.py  test_models.py
tests/clients/: test_logfire_api.py  test_logfire_api_integration.py
tests/models/: test_logfire_api.py
